	Bundle all settings into config/settings.rb
	Client: bundle logo image data in executable
	Assure minutes left in client status window never exceeds available time until closing
	Client shuts down automatically according to department's closing hours
	Client tries to reconnect after network disconnects
	Client rewritten in Go and distributed as a compiled executable
	Raketask for daily logging of opening hours
	Shows options in tabs
	Only show users logged in to a department where admin has access
	Correctly handles different time limitation on clients
0.0.8
	Bugfix to handle network discconnect on client side
	Refactor: Org/Branch/Dept Options now handled by common view partial
	Table of users sortable and searchable by name
	Adminstration interface log in now handled by admin users
	Fixes bug when mycel recieves invalid user birthdates from sip2
0.0.5
	Cosmetic changes and description updates to admin interface
	Add rake task to seed a branch from yaml
	Allow changing of shorttimemachine time limit in admin interface
0.0.4
	Bugfixes on shorttimeclients/AnonymousUsers
0.0.3
	Update views when clients disconnects unintentionally
	Update branches live view with active and inactive clients
	More detailed log message for cronjob
	Don't use whenever gem to create cronjob
	Show library card number instead of user's real name in logged in window
	Client IP-address not required
0.0.2
	Initial release