@@ -1,3 +1,5 @@
+	Changing logging format to make it easier to parse
+	More detailed logging for the API-server
 	Bundle all settings into config/settings.rb
 	Client: bundle logo image data in executable
 	Assure minutes left in client status window never exceeds available time until closing
